name:                ln-api
version:             0.1.0.2
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/ln-api#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LN.Api
  exposed-modules:     LN.Api.Internal
                       LN.Api.Web
                       LN.Api.Web.Actions
--LN.Api.Web.Board
--                       LN.Api.Web.Forum
--                       LN.Api.Web.Like
--                       LN.Api.Web.Me
                       LN.Api.Web.Misc
                       LN.Api.Web.Route
                       LN.Api.Web.Types
--                       LN.Api.Web.Organization
--                       LN.Api.Web.Pm
--                       LN.Api.Web.Profile
--                       LN.Api.Web.Profile.Organization
--                       LN.Api.Web.Profile.User
--                       LN.Api.Web.Route
--                       LN.Api.Web.Thread
--                       LN.Api.Web.ThreadPost
--                       LN.Api.Web.User
  build-depends:       base >= 4.7 && < 5
                     , ln-types
                     , haskell-api-helpers
                     , aeson
                     , bytestring
                     , connection >= 0.2.5
                     , GenericPretty >= 1.2.1
                     , http-client
                     , http-client-tls >= 0.2
                     , http-conduit >= 2.1.8
                     , lens
                     , lens-aeson
                     , mtl
                     , text
                     , transformers
                     , wreq
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric, RecordWildCards, OverloadedStrings
  ghc-options:       -j -Wall

-- executable ln-api-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , ln-api
--  default-language:    Haskell2010

test-suite ln-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ln-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ln-api
